--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.udacity.gradle.builditbigger"
@@ -21,7 +21,6 @@ android {
 }
 
 dependencies {
-    compile project(':jokestelling')
     compile project(':joke-display')
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -29,4 +28,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.gms:play-services-ads:10.2.1'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile project(path: ':backend', configuration: 'android-endpoints')
+    compile(group: 'com.google.api-client', name: 'google-api-client', version: '1.22.0') {
+        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+    }
 }
