--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,12 @@ dependencies {
     compile(group: 'com.google.api-client', name: 'google-api-client', version: '1.22.0') {
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
+    // testing
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    androidTestCompile('com.android.support.test.espresso:espresso-intents:2.2.2') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+
 }
